# zstandard

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  mutation_test_config.xml  quality_summary.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: chore_task.yml  config.yml  feature_request.yml  help_request.yml
.github/scripts/: update_versions.dart  verify-pubdev-package.sh
.github/workflows/: copilot_commit.yml  copilot_issue.yml  copilot_issue_comment.yml  copilot_pull_request.yml  copilot_pull_request_comment.yml  hotfix_workflow.yml  pr_check_android.yml  pr_check_cli.yml  pr_check_ios.yml  pr_check_linux.yml  pr_check_macos.yml  pr_check_platform_interface.yml  pr_check_web.yml  pr_check_windows.yml  pr_check_zstandard.yml  push_checks_android.yml  push_checks_cli.yml  push_checks_ios.yml  push_checks_linux.yml  push_checks_macos.yml  push_checks_platform_interface.yml  push_checks_web.yml  push_checks_windows.yml  push_checks_zstandard.yml  quality_report.yml  release_workflow.yml  stale.yaml
docs/: GLOSSARY.md  README.md
docs/api/: cli-api.md  extensions.md  main-api.md  platform-interface.md
docs/architecture/: ffi-implementation.md  isolate-pattern.md  overview.md  performance.md  platform-interface.md  web-implementation.md
docs/deployment/: RUNBOOK.md
docs/development/: CONTRIBUTING.md  building.md  ci-cd.md  code-style.md  emulator-setup.md  ios-macos-zstd-symlinks.md  release-process.md  setup.md  testing.md
docs/guides/: advanced-usage.md  best-practices.md  compression-levels.md  error-handling.md  getting-started.md  installation.md  migration-guide.md  performance-tips.md  security.md  usage-examples.md
docs/troubleshooting/: common-issues.md  debugging.md  platform-issues.md
scripts/: build_android.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_web_wasm.sh  build_windows.bat  check_coverage.sh  check_performance_regression.dart  collect_all_coverage.sh  coverage_report.bat  coverage_report.sh  ensure_macos_framework.sh  generate_quality_report.dart  manage_android_emulator.sh  manage_ios_simulator.sh  regenerate_bindings.sh  run_all_macos.sh  run_benchmark.sh  run_mutation_test.sh  sync_zstd_ios_macos.sh  test_all.bat  test_all.sh  test_all_integration.sh  test_android_integration.sh  test_ios_integration.sh  test_linux_integration.sh  test_macos_integration.sh  test_web_integration.sh  test_windows_integration.bat  update_zstd.sh
zstandard/: CHANGELOG.md  README.md  pubspec.yaml
zstandard/example/: README.md  pubspec.yaml
zstandard/example/integration_test/: plugin_integration_test.dart
zstandard/example/ios/: Podfile
zstandard/example/macos/: Podfile
zstandard/example/web/: zstd.js
zstandard/lib/: zstandard.dart
zstandard/test/: error_handling_test.dart  properties_test.dart  zstandard_advanced_test.dart  zstandard_test.dart
zstandard_android/: README.md  ffigen.yaml  pubspec.yaml
zstandard_android/android/: build.gradle
zstandard_android/example/: pubspec.yaml
zstandard_android/lib/: zstandard_android.dart  zstandard_android_bindings_generated.dart
zstandard_android/test/: properties_test.dart  tests_exist_elsewhere_test.dart  zstandard_android_test.dart
zstandard_android/zstd_build/: CMakeLists.txt
zstandard_cli/: CHANGELOG.md  README.md  ffigen.yaml  mutation_test_config.xml  pubspec.yaml
zstandard_cli/benchmark/: benchmark_suite.dart  compression_benchmark.dart
zstandard_cli/builders/linux_arm/: CMakeLists.txt
zstandard_cli/builders/macos_intel/: CMakeLists.txt
zstandard_cli/builders/windows_arm/: CMakeLists.txt
zstandard_cli/test/: properties_test.dart  zstandard_cli_test.dart
zstandard_ios/: README.md  ffigen.yaml  pubspec.yaml
zstandard_ios/example/: pubspec.yaml
zstandard_ios/ios/: zstandard_ios.podspec
zstandard_ios/ios/Classes/zstd/: CMakeLists.txt
zstandard_ios/lib/: zstandard_ios.dart  zstandard_ios_bindings_generated.dart
zstandard_ios/scripts/: sync_zstd.sh
zstandard_ios/test/: properties_test.dart  tests_exist_elsewhere_test.dart  zstandard_ios_test.dart
zstandard_linux/: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
zstandard_linux/example/: pubspec.yaml
zstandard_linux/lib/: zstandard_linux.dart  zstandard_linux_bindings_generated.dart
zstandard_linux/linux/: CMakeLists.txt
zstandard_linux/test/: flutter_test_config.dart  properties_test.dart  zstandard_linux_method_channel_test.dart  zstandard_linux_test.dart
zstandard_linux/zstd_build/: CMakeLists.txt
zstandard_macos/: README.md  ffigen.yaml  pubspec.yaml
zstandard_macos/example/: pubspec.yaml
zstandard_macos/lib/: zstandard_macos.dart  zstandard_macos_bindings_generated.dart
zstandard_macos/macos/: zstandard_macos.podspec
zstandard_macos/scripts/: sync_zstd.sh
zstandard_macos/test/: properties_test.dart  tests_exist_elsewhere_test.dart  zstandard_macos_test.dart
zstandard_native/: .gitignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
zstandard_native/lib/: zstandard_native.dart  zstandard_native_bindings.dart
zstandard_platform_interface/: CHANGELOG.md  pubspec.yaml
zstandard_platform_interface/test/: properties_test.dart  zstandard_platform_interface_method_channel_test.dart  zstandard_platform_interface_test.dart
zstandard_web/: CHANGELOG.md  README.md  pubspec.yaml
zstandard_web/blob/: zstd.wasm
zstandard_web/example/: pubspec.yaml
zstandard_web/lib/: zstandard_web.dart
zstandard_web/test/: README.md  properties_test.dart  properties_test_stub.dart  tests_exist_elsewhere_test.dart  wasm_interop_test.dart  wasm_interop_test_impl.dart  wasm_interop_test_stub.dart  zstandard_web_test.dart  zstandard_web_test_stub.dart
zstandard_windows/: README.md  ffigen.yaml  pubspec.yaml
zstandard_windows/example/: pubspec.yaml
zstandard_windows/lib/: zstandard_windows.dart  zstandard_windows_bindings_generated.dart
zstandard_windows/test/: properties_test.dart  zstandard_windows_method_channel_test.dart  zstandard_windows_test.dart
zstandard_windows/windows/: CMakeLists.txt
zstandard_windows/zstd_build/: CMakeLists.txt
(+45 files in other folders)
